--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -221,6 +221,22 @@ img {
   margin-right: 0.5rem;
   transition: opacity 0.2s ease-in;
   outline: none;
+  
+}
+
+.btn-friend {
+  display: flex;
+  flex-direction: column;
+  background: var(--light-color);
+  color: #333;
+  padding: 0.4rem 1.3rem;
+  font-size: 2rem;
+  border: none;
+  cursor: pointer;
+  margin: 0 auto;
+  transition: opacity 0.2s ease-in;
+  outline: none;
+  margin-bottom: 1rem;
 }
 
 .btn-link {
